kubernetes-masterclass-beginners/custom-container/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: myapp:latest
        imagePullPolicy: Never
        name: myapp
        ports:
        - containerPort: 8000
        resources: {}
status: {}
