kubernetes-masterclass-beginners/custom-container/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localtest.me
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8000
        path: /
        pathType: Prefix
